--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,81 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
+    <style> 
+      [data-darkreader-inline-bgcolor] {
+      background-color: var(--darkreader-inline-bgcolor) !important;
+      }
+      [data-darkreader-inline-bgimage] {
+      background-image: var(--darkreader-inline-bgimage) !important;
+      }
+      [data-darkreader-inline-border] {
+      border-color: var(--darkreader-inline-border) !important;
+      }
+      [data-darkreader-inline-border-bottom] {
+      border-bottom-color: var(--darkreader-inline-border-bottom) !important;
+      }
+      [data-darkreader-inline-border-left] {
+      border-left-color: var(--darkreader-inline-border-left) !important;
+      }
+      [data-darkreader-inline-border-right] {
+      border-right-color: var(--darkreader-inline-border-right) !important;
+      }
+      [data-darkreader-inline-border-top] {
+      border-top-color: var(--darkreader-inline-border-top) !important;
+      }
+      [data-darkreader-inline-boxshadow] {
+      box-shadow: var(--darkreader-inline-boxshadow) !important;
+      }
+      [data-darkreader-inline-color] {
+      color: var(--darkreader-inline-color) !important;
+      }
+      [data-darkreader-inline-fill] {
+      fill: var(--darkreader-inline-fill) !important;
+      }
+      [data-darkreader-inline-stroke] {
+      stroke: var(--darkreader-inline-stroke) !important;
+      }
+      [data-darkreader-inline-outline] {
+      outline-color: var(--darkreader-inline-outline) !important;
+      }
+      html {
+        background-color: #17181c !important;
+      }
+      html, body, input, textarea, select, button {
+        background-color: #17181c;
+      }
+      html, body, input, textarea, select, button {
+        border-color: #575757;
+        color: #e8e7e3;
+      }
+      a {
+        color: #3391ff;
+      }
+      table {
+        border-color: #4c4c4c;
+      }
+      ::placeholder {
+        color: #b9b4ac;
+      }
+      ::selection {
+        background-color: #005ccc;
+        color: #ffffff;
+      }
+      ::-moz-selection {
+        background-color: #005ccc;
+        color: #ffffff;
+      }
+      input:-webkit-autofill,
+      textarea:-webkit-autofill,
+      select:-webkit-autofill {
+        background-color: #545b00 !important;
+        color: #e8e7e3 !important;
+      }
 
+      .jfk-bubble {
+        background-color: #000000 !important;
+      }
+    </style>
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
