--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,6 +85,11 @@
       .jfk-bubble {
         background-color: #000000 !important;
       }
+      .wrapper-footer {
+        border-top-color: rgb(58, 58, 58);
+        border-bottom-color: rgb(58, 58, 58);
+        background-color: rgb(27, 29, 34);
+      }
     </style>
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
