--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -90,6 +90,9 @@
         border-bottom-color: rgb(58, 58, 58);
         background-color: rgb(27, 29, 34);
       }
+      h1, h2, h3, h4, h5, h6 {
+        color: rgb(219, 217, 213);
+      }
     </style>
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
