Title and Description
Dark css added for title and description

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,6 +93,12 @@
       h1, h2, h3, h4, h5, h6 {
         color: rgb(219, 217, 213);
       }
+      .site-name {
+        color: rgb(213, 210, 205);
+       }
+      .site-description {
+        color: rgb(194, 190, 183);
+      }
     </style>
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
