--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -99,6 +99,9 @@
       .site-description {
         color: rgb(194, 190, 183);
       }
+      nav a {
+        color: rgb(213, 210, 205);
+      }
     </style>
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
