--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -102,6 +102,10 @@
       nav a {
         color: rgb(213, 210, 205);
       }
+      a {
+        color: rgb(118, 170, 212);
+        text-decoration-color: initial;
+      }
     </style>
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
