--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,6 +93,9 @@
       h1, h2, h3, h4, h5, h6 {
         color: rgb(219, 217, 213);
       }
+      h1 a {
+        color: inherit;
+      }
       .site-name {
         color: rgb(213, 210, 205);
        }
