bottom border dark color

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -109,6 +109,9 @@
         color: rgb(118, 170, 212);
         text-decoration-color: initial;
       }
+      .posts > .post {
+        border-bottom-color: rgb(54, 54, 54);
+      }
     </style>
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
