Header dark bottom border

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -112,6 +112,9 @@
       .posts > .post {
         border-bottom-color: rgb(54, 54, 54);
       }
+      .masthead {
+        border-bottom-color: rgb(54, 54, 54);
+      }
     </style>
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
