--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -123,7 +123,7 @@
     <div class="wrapper-masthead">
       <div class="container">
         <header class="masthead clearfix">
-          <a href="https://aekhz.com" class="site-avatar"><img src="{{ site.avatar }}" /></a>
+          <a onClick="window.location='https://aekhz.com';" class="site-avatar"><img src="{{ site.avatar }}" /></a>
 
           <div class="site-info">
             <h1 class="site-name"><a href="{{ site.baseurl }}/">{{ site.name }}</a></h1>
